Added js validation

--- a/index.html
+++ b/index.html
@@ -10,80 +10,89 @@
     <link rel="stylesheet" href="https://use.typekit.net/whd4hfy.css">
     <script src="script/app.js"></script>
     <script src="script/dataHandler.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="manifest" href="img/site.webmanifest">
+    <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#006db0">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
     <div class="o-grid-head">
+
         <div class="o-grid__header">
             <img class="c-header__image" src="img/Group 20.png" alt="parking" />
             <h1>Park-check</h1>
-        </div>
-    </div>
-        <label class="switch">
-            <input type="checkbox">
-            <span class="slider">
-                <svg class="maan" id="maan" enable-background="new 0 0 510.029 510.029" height="512"
-                    viewBox="0 0 510.029 510.029" width="512">
-                    <g>
-                        <path
-                            d="m349.029 337.515c-121.86 0-221-99.14-221-221 0-19.721 2.613-39.312 7.766-58.229l10.442-38.331-33.17 21.865c-97.371 64.184-136.892 185.35-98.653 293.507 17.588-17.195 41.633-27.813 68.115-27.813 53.762 0 97.5 43.738 97.5 97.5 0 29.75-13.398 56.426-34.472 74.324 32.832 15.243 68.638 23.176 105.472 23.176 117.362 0 213.593-79.944 242.179-184.886l10.441-38.331-33.17 21.865c-36.077 23.782-78.074 36.353-121.45 36.353z" />
-                        <circle cx="82.529" cy="405.015" r="67.5" />
-                        <path
-                            d="m397.529 110.505 29.462-17.01v34.02h30v-34.019l29.461 17.009 15-25.981-29.462-17.009 29.462-17.01-15-25.981-29.461 17.01v-34.019h-30v34.019l-29.462-17.01-15 25.981 29.462 17.01-29.462 17.009z" />
-                        <path
-                            d="m233.606 245.505 29.461-17.009v34.019h30v-34.02l29.462 17.01 15-25.981-29.462-17.009 29.462-17.01-15-25.981-29.462 17.01v-34.019h-30v34.019l-29.461-17.01-15 25.981 29.462 17.01-29.462 17.009z" />
-                        <path d="m480.029 187.515h30v30h-30z" />
-                        <path d="m390.029 157.515h30v30h-30z" />
-                        <path d="m255.029 37.515h30v30h-30z" />
-                        <path d="m180.029 97.515h30v30h-30z" />
-                        <path d="m375.029 262.515h30v30h-30z" />
-                    </g>
-                </svg>
-                <svg class="zon" version="1.1" id="zon"x="0px" y="0px" width="45.16px" height="45.16px"
-                    viewBox="0 0 45.16 45.16" style="enable-background:new 0 0 45.16 45.16;" xml:space="preserve">
-                    <g>
+            <label class="switch">
+                <input type="checkbox">
+                <span class="slider">
+                    <svg class="maan" id="maan" enable-background="new 0 0 510.029 510.029" height="512"
+                        viewBox="0 0 510.029 510.029" width="512">
                         <g>
-                            <path d="M22.58,11.269c-6.237,0-11.311,5.075-11.311,11.312s5.074,11.312,11.311,11.312c6.236,0,11.311-5.074,11.311-11.312
-                S28.816,11.269,22.58,11.269z" />
+                            <path
+                                d="m349.029 337.515c-121.86 0-221-99.14-221-221 0-19.721 2.613-39.312 7.766-58.229l10.442-38.331-33.17 21.865c-97.371 64.184-136.892 185.35-98.653 293.507 17.588-17.195 41.633-27.813 68.115-27.813 53.762 0 97.5 43.738 97.5 97.5 0 29.75-13.398 56.426-34.472 74.324 32.832 15.243 68.638 23.176 105.472 23.176 117.362 0 213.593-79.944 242.179-184.886l10.441-38.331-33.17 21.865c-36.077 23.782-78.074 36.353-121.45 36.353z" />
+                            <circle cx="82.529" cy="405.015" r="67.5" />
+                            <path
+                                d="m397.529 110.505 29.462-17.01v34.02h30v-34.019l29.461 17.009 15-25.981-29.462-17.009 29.462-17.01-15-25.981-29.461 17.01v-34.019h-30v34.019l-29.462-17.01-15 25.981 29.462 17.01-29.462 17.009z" />
+                            <path
+                                d="m233.606 245.505 29.461-17.009v34.019h30v-34.02l29.462 17.01 15-25.981-29.462-17.009 29.462-17.01-15-25.981-29.462 17.01v-34.019h-30v34.019l-29.461-17.01-15 25.981 29.462 17.01-29.462 17.009z" />
+                            <path d="m480.029 187.515h30v30h-30z" />
+                            <path d="m390.029 157.515h30v30h-30z" />
+                            <path d="m255.029 37.515h30v30h-30z" />
+                            <path d="m180.029 97.515h30v30h-30z" />
+                            <path d="m375.029 262.515h30v30h-30z" />
+                        </g>
+                    </svg>
+                    <svg class="zon" version="1.1" id="zon" x="0px" y="0px" width="45.16px" height="45.16px"
+                        viewBox="0 0 45.16 45.16" style="enable-background:new 0 0 45.16 45.16;" xml:space="preserve">
+                        <g>
                             <g>
+                                <path d="M22.58,11.269c-6.237,0-11.311,5.075-11.311,11.312s5.074,11.312,11.311,11.312c6.236,0,11.311-5.074,11.311-11.312
+                    S28.816,11.269,22.58,11.269z" />
                                 <g>
-                                    <path d="M22.58,7.944c-1.219,0-2.207-0.988-2.207-2.206V2.207C20.373,0.988,21.361,0,22.58,0c1.219,0,2.207,0.988,2.207,2.207
-                        v3.531C24.787,6.956,23.798,7.944,22.58,7.944z" />
-                                </g>
-                                <g>
-                                    <path d="M22.58,37.215c-1.219,0-2.207,0.988-2.207,2.207v3.53c0,1.22,0.988,2.208,2.207,2.208c1.219,0,2.207-0.988,2.207-2.208
-                        v-3.53C24.787,38.203,23.798,37.215,22.58,37.215z" />
-                                </g>
-                                <g>
-                                    <path d="M32.928,12.231c-0.861-0.862-0.861-2.259,0-3.121l2.497-2.497c0.861-0.861,2.259-0.861,3.121,0
-                        c0.862,0.862,0.862,2.26,0,3.121l-2.497,2.497C35.188,13.093,33.791,13.093,32.928,12.231z" />
-                                </g>
-                                <g>
-                                    <path d="M12.231,32.93c-0.862-0.863-2.259-0.863-3.121,0l-2.497,2.496c-0.861,0.861-0.862,2.26,0,3.121
-                        c0.862,0.861,2.26,0.861,3.121,0l2.497-2.498C13.093,35.188,13.093,33.79,12.231,32.93z" />
-                                </g>
-                                <g>
-                                    <path d="M37.215,22.58c0-1.219,0.988-2.207,2.207-2.207h3.531c1.219,0,2.207,0.988,2.207,2.207c0,1.219-0.988,2.206-2.207,2.206
-                        h-3.531C38.203,24.786,37.215,23.799,37.215,22.58z" />
-                                </g>
-                                <g>
-                                    <path d="M7.944,22.58c0-1.219-0.988-2.207-2.207-2.207h-3.53C0.988,20.373,0,21.361,0,22.58c0,1.219,0.988,2.206,2.207,2.206
-                        h3.531C6.956,24.786,7.944,23.799,7.944,22.58z" />
-                                </g>
-                                <g>
-                                    <path d="M32.928,32.93c0.862-0.861,2.26-0.861,3.121,0l2.497,2.497c0.862,0.86,0.862,2.259,0,3.12s-2.259,0.861-3.121,0
-                        l-2.497-2.497C32.066,35.188,32.066,33.791,32.928,32.93z" />
-                                </g>
-                                <g>
-                                    <path d="M12.231,12.231c0.862-0.862,0.862-2.259,0-3.121L9.734,6.614c-0.862-0.862-2.259-0.862-3.121,0
-                        c-0.862,0.861-0.862,2.259,0,3.12l2.497,2.497C9.972,13.094,11.369,13.094,12.231,12.231z" />
+                                    <g>
+                                        <path d="M22.58,7.944c-1.219,0-2.207-0.988-2.207-2.206V2.207C20.373,0.988,21.361,0,22.58,0c1.219,0,2.207,0.988,2.207,2.207
+                            v3.531C24.787,6.956,23.798,7.944,22.58,7.944z" />
+                                    </g>
+                                    <g>
+                                        <path d="M22.58,37.215c-1.219,0-2.207,0.988-2.207,2.207v3.53c0,1.22,0.988,2.208,2.207,2.208c1.219,0,2.207-0.988,2.207-2.208
+                            v-3.53C24.787,38.203,23.798,37.215,22.58,37.215z" />
+                                    </g>
+                                    <g>
+                                        <path d="M32.928,12.231c-0.861-0.862-0.861-2.259,0-3.121l2.497-2.497c0.861-0.861,2.259-0.861,3.121,0
+                            c0.862,0.862,0.862,2.26,0,3.121l-2.497,2.497C35.188,13.093,33.791,13.093,32.928,12.231z" />
+                                    </g>
+                                    <g>
+                                        <path d="M12.231,32.93c-0.862-0.863-2.259-0.863-3.121,0l-2.497,2.496c-0.861,0.861-0.862,2.26,0,3.121
+                            c0.862,0.861,2.26,0.861,3.121,0l2.497-2.498C13.093,35.188,13.093,33.79,12.231,32.93z" />
+                                    </g>
+                                    <g>
+                                        <path d="M37.215,22.58c0-1.219,0.988-2.207,2.207-2.207h3.531c1.219,0,2.207,0.988,2.207,2.207c0,1.219-0.988,2.206-2.207,2.206
+                            h-3.531C38.203,24.786,37.215,23.799,37.215,22.58z" />
+                                    </g>
+                                    <g>
+                                        <path d="M7.944,22.58c0-1.219-0.988-2.207-2.207-2.207h-3.53C0.988,20.373,0,21.361,0,22.58c0,1.219,0.988,2.206,2.207,2.206
+                            h3.531C6.956,24.786,7.944,23.799,7.944,22.58z" />
+                                    </g>
+                                    <g>
+                                        <path d="M32.928,32.93c0.862-0.861,2.26-0.861,3.121,0l2.497,2.497c0.862,0.86,0.862,2.259,0,3.12s-2.259,0.861-3.121,0
+                            l-2.497-2.497C32.066,35.188,32.066,33.791,32.928,32.93z" />
+                                    </g>
+                                    <g>
+                                        <path d="M12.231,12.231c0.862-0.862,0.862-2.259,0-3.121L9.734,6.614c-0.862-0.862-2.259-0.862-3.121,0
+                            c-0.862,0.861-0.862,2.259,0,3.12l2.497,2.497C9.972,13.094,11.369,13.094,12.231,12.231z" />
+                                    </g>
                                 </g>
                             </g>
                         </g>
-                    </g>
-                </svg>
-            </span>
-        </label>
+                    </svg>
+                </span>
+            </label>
+        </div>
+    </div>
+
     <div class="js-grid-cards o-grid">
 
     </div>
